Feat/MET-5968 setting new data for target data (#26)
* MET-5968 Target data script

* MET-5968 Created a new script to write down historical data into mongo

* MET-5968 Started setting up the API

* MET-5969 Finished first API call implementation

* MET-5968 Fixed queries from mongo and API response structure

* MET-5968 Completed second API call

* MET-5968 Updated general statistics API call with new parameter

* MET-5968 Added javadoc and created unit test class

* MET-5968 Added new unit test

* MET-5968 Added new unit tests

* Update README

* MET-5968 Code review comments

* MET-5968 Fixed the scripts in worker

More code review changes

---------

Co-authored-by: andyjmaclean <andyjmaclean@gmail.com>