@@ -20,7 +20,16 @@ import eu.europeana.statistics.dashboard.service.persistence.StatisticsQuery.Val
 
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
-import java.util.*;
+import java.util.HashMap;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Set;
+import java.util.List;
+import java.util.Optional;
+import java.util.HashSet;
+import java.util.Arrays;
+import java.util.EnumMap;
+import java.util.ArrayList;
 import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.tuple.ImmutablePair;
@@ -52,27 +61,32 @@ public class StatisticsService {
     /**
      * It queries the general data for all of Europeana without content Tier 0
      *
+     * @param country - If country is present, then apply country filtering in query
      * @return A list with all breakdowns and their respective value
      */
-    public ResultListFilters queryGeneralEuropeanaDataWithoutContentTierZero() {
+    public ResultListFilters queryGeneralEuropeanaDataWithoutContentTierZero(String country) {
         // Get total count of records (it is the same for each group of breakdowns)
-        return getResultListFilters(
+        return country.isEmpty() ? getResultListFilters(
                 // It returns a list of StatisticsData, where each has a list of breakdowns
                 prepareGeneralQueriesWithoutContentTierZero(getStatisticsQuery(),
-                        getMongoStatisticFields())
-        );
+                        getMongoStatisticFields())) :
+                getResultListFilters(
+                        prepareGeneralQueriesWithoutContentTierZeroAndWithCountry(getStatisticsQuery(),
+                                getMongoStatisticFields(), country));
     }
 
     /**
      * It queries the general data for all of Europeana Including Content Tier 0
      *
+     * @param country - If country is present, then apply country filtering in query
      * @return A list with all breakdowns and their respective value
      */
-    public ResultListFilters queryGeneralEuropeanaDataIncludingContentTierZero() {
-        return getResultListFilters(
+    public ResultListFilters queryGeneralEuropeanaDataIncludingContentTierZero(String country) {
+        return country.isEmpty() ? getResultListFilters(
                 prepareGeneralQueries(getStatisticsQuery(), getMongoStatisticFields()
-                )
-        );
+                )) :
+                getResultListFilters(
+                        prepareGeneralQueriesWithCountry(getStatisticsQuery(), getMongoStatisticFields(), country));
     }
 
     /**
@@ -94,14 +108,14 @@ public class StatisticsService {
      */
     private List<BreakdownResult> calculateBreakDownsResultList(List<StatisticsData> allBreakdowns) {
         // Get total count of records (it is the same for each group of breakdowns)
-        int totalRecordCount = allBreakdowns.get(0).getRecordCount();
+        int totalRecordCount = allBreakdowns.getFirst().getRecordCount();
         // It returns a list of StatisticsData, where each has a list of breakdowns
         return allBreakdowns
                 .stream()
                 .map(statisticsData -> {
                     // Replace Field with FacetValue object
                     FacetValue breakdownBy = statisticsData.getBreakdown()
-                            .get(0)
+                            .getFirst()
                             .getField()
                             .getFacet();
 
@@ -223,6 +237,30 @@ public class StatisticsService {
                 .collect(Collectors.toList());
     }
 
+    private List<StatisticsData> prepareGeneralQueriesWithCountry(StatisticsQuery query,
+                                                                  List<MongoStatisticsField> filterMongoStatisticFields,
+                                                                  String country) {
+        // Execute a breakdown query for each Value field
+        return filterMongoStatisticFields.stream()
+                .map(field -> query.withBreakdowns(field)
+                        .withValueFilter(MongoStatisticsField.COUNTRY, List.of(country))
+                        .queryForStatistics())
+                .collect(Collectors.toList());
+    }
+
+    private List<StatisticsData> prepareGeneralQueriesWithoutContentTierZeroAndWithCountry(StatisticsQuery query,
+                                                                                           List<MongoStatisticsField> filterMongoStatisticFields,
+                                                                                           String country) {
+        // Execute a breakdown query for each Value field
+        return filterMongoStatisticFields.stream()
+                .map(field -> query.withBreakdowns(field)
+                        .withValueFilter(MongoStatisticsField.CONTENT_TIER,
+                                List.of("1", "2", "3", "4"))
+                        .withValueFilter(MongoStatisticsField.COUNTRY, List.of(country))
+                        .queryForStatistics())
+                .collect(Collectors.toList());
+    }
+
     @NotNull
     private List<MongoStatisticsField> getMongoStatisticFields() {
         return Arrays.stream(
@@ -230,7 +268,7 @@ public class StatisticsService {
                 field -> field != MongoStatisticsField.UPDATED_DATE
                         && field != MongoStatisticsField.CREATED_DATE
                         && field != MongoStatisticsField.DATASET_ID
-                        && field != MongoStatisticsField.RIGHTS).collect(Collectors.toUnmodifiableList());
+                        && field != MongoStatisticsField.RIGHTS).toList();
     }
 
     private StatisticsQuery getStatisticsQuery() {
